--- a/finimalism7.css
+++ b/finimalism7.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 /* Limit Custom CSS code box size */
 #txtCustomCss, #txtLocalCustomCss {
@@ -2707,4 +2708,9 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 	#genresTab .portraitCard, .squareCard {
 		width: 11%;
 	}
+}
+
+#displayPreferencesPage .sectionTitle {
+  margin-bottom: 1em !important;
+  margin-left: 0em !important;
 }
