--- a/finimalism7.css
+++ b/finimalism7.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 /* Limit Custom CSS code box size */
 #txtCustomCss, #txtLocalCustomCss {
@@ -2660,7 +2661,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 
 	#moviesTab .secondary.listItemMediaInfo .mediaInfoItem.mediaInfoText.closedCaptionMediaInfoText {
 		transform: translateX(-50%);
-		min-width: 4vw;
+		min-width: 1.5vw;
 		justify-content: center;
 	}
 
@@ -2702,7 +2703,44 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 		width: 13vw;
 		justify-content: space-around;
 	}
+	
+	#episodesTab .listItem {
+		font-size: 1.15em;
+	}
 
+	#episodesTab .listItemBody.itemAction {
+		max-width: 50vw;
+	}
+
+	#episodesTab .secondary.listItemMediaInfo {
+		width: 21vw;
+	}
+
+	#episodesTab .secondary.listItemMediaInfo .mediaInfoItem {
+		transform: translateX(-50%);
+		min-width: 6.5vw;
+		justify-content: center !important;
+		display: flex;
+		margin-right: 0;
+	}
+
+	#episodesTab .secondary.listItemMediaInfo .starRatingContainer.mediaInfoItem {
+		transform: translateX(-50%);
+		min-width: 6vw;
+		margin-right: 0vw;
+	}
+
+	#episodesTab .secondary.listItemMediaInfo .mediaInfoItem.mediaInfoText.closedCaptionMediaInfoText {
+		transform: translateX(-50%);
+		min-width: 1.5vw;
+		justify-content: center;
+		margin-right: 1em;
+	}
+
+	#episodesTab .listViewUserDataButtons {
+		width: 13vw;
+		justify-content: space-around;
+	}
 
 	#genresTab .portraitCard, .squareCard {
 		width: 11%;
