--- a/finimalism7.css
+++ b/finimalism7.css
@@ -198,9 +198,7 @@ span.homeLibraryText {
 
 /* Apply progress bar gradient */
 .itemProgressBarForeground {
-    background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
-}
-
+    background: linear-gradient(90deg, rgb(11, 1, 15) 0%, rgb(95, 5, 125) 35%, rgb(63, 120, 209) 66%, rgb(10, 170, 227) 100%);}
 
 /*Raise detailPage detailRibbon */
 
@@ -424,6 +422,7 @@ a[data-role="button"] {
 progress {
     background: rgba(0, 0, 0, 0.5) !important;
 }
+
 
 /*Theme syncplay*/
 .syncPlayIconCircle {
@@ -1509,7 +1508,7 @@ progress::-webkit-progress-value {
 }
 
 .layout-desktop .sectionTitle {
-    margin-left: 1em !important;
+    margin-left: 0em !important;
 	margin-top: 0.5em !important;
 	margin-bottom: -0.3em !important;
 }
@@ -1519,6 +1518,22 @@ progress::-webkit-progress-value {
 }
 .layout-mobile .sectionTitleTextButton > .material-icons {
     padding-top: 0.4em;
+}
+
+.itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap {
+	padding-left: 3%;
+}
+
+#homeTab .emby-scroller {
+	padding-left: 1em;
+}
+
+[dir="ltr"] .padded-left {
+  padding-left: 1em;
+}
+
+.card:hover .indicator.videoIndicator {
+	opacity: 0;
 }
 
 /*Fix the UI shifting around*/
@@ -1560,19 +1575,19 @@ progress::-webkit-progress-value {
 }
 
 .layout-desktop .overflowPortraitCard {
-    width: 12.51em;
+    width: 12%;
 }
 
 .layout-desktop .overflowSquareCard {
-    width: 12.51em;
+    width: 12%;
 }
 
 .layout-mobile .overflowPortraitCard {
-	width: 12.88em;
+	width: 12%;
 }
 
 .layout-mobile .overflowSquareCard {
-    width: 12.88em;
+    width: 12%;
 }
 
 /* Larger screens */
@@ -1875,6 +1890,7 @@ progress::-webkit-progress-value {
 
 .sectionTitle.sectionTitle-cards {
     margin-right: 0.1em;
+	padding-bottom: 0.5em;
 }
 
 .itemsContainer.padded-left {
@@ -2121,7 +2137,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 /* Video Playback Progress Bar */
 .mdl-slider-background-lower {
-    background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% );
+    background: linear-gradient(90deg, rgb(11, 1, 15) 0%, rgb(95, 5, 125) 35%, rgb(63, 120, 209) 66%, rgb(10, 170, 227) 100%);
 }
 
 .mdl-slider-background-upper {
@@ -2130,7 +2146,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 .layout-desktop div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
   margin: 0;
-  padding-bottom: 0.2em;
+  padding-bottom: 0.5em;
   padding-top: .5em;
 }
 
@@ -2160,7 +2176,7 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 /* Adjust alignment for the cards within the Continue Watching section */
 .layout-desktop .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard {
-    width: 27.8em;
+    width: 24%;
     margin-top: 0em;
     font-size: 90% !important;
 }
@@ -2431,12 +2447,12 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 
 .layout-desktop .overflowBackdropCard {
-	width: 27.8em;
+	width: 24%;
 	font-size: 90% !important;
 }
 
 .layout-desktop .verticalSection.section2 .card.overflowBackdropCard {
-	width: 13.88em !important;
+	width: 12% !important;
 	font-size: 90% !important;
 }
 
@@ -2642,7 +2658,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 	}
 
 	.headerTabs.sectionTabs .tabs-viewmenubar.emby-tabs.focusable.scrollX .emby-tab-button.emby-button.emby-tab-button-active .emby-button-foreground {
-		transform: translateY(-33%);
+		transform: translateY(-29%);
 	}
 
 	.headerTabs .emby-tab-button {
