--- a/finimalism7.css
+++ b/finimalism7.css
@@ -1503,6 +1503,7 @@ progress::-webkit-progress-value {
 .sectionTitleTextButton > .material-icons {
   font-size: 1.5em;
   margin-bottom: -0.1em;
+  opacity: 0;
  }
  
 .sectionTitle {
@@ -1513,16 +1514,17 @@ progress::-webkit-progress-value {
 
 .layout-desktop .sectionTitle {
     margin-left: 0em !important;
-	margin-top: 1em !important;
-	margin-bottom: -0.3em !important;
+	margin-top: 0.5em !important;
+	margin-bottom: 0.5em !important;
 	font-weight: 700;
+	font-size: 1.6em;
 }
 
 .sectionTitleTextButton > .material-icons {
-    margin-top: 0.7em;
+
 }
 .layout-mobile .sectionTitleTextButton > .material-icons {
-    padding-top: 0.4em;
+
 }
 
 .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap {
@@ -1896,7 +1898,6 @@ progress::-webkit-progress-value {
 
 .sectionTitle.sectionTitle-cards {
     margin-right: 0.1em;
-	padding-bottom: 0.5em;
 }
 
 .itemsContainer.padded-left {
@@ -2453,12 +2454,12 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 
 .layout-desktop .overflowBackdropCard {
-	width: 24%;
+	width: 20vw;
 	font-size: 90% !important;
 }
 
 .layout-desktop .verticalSection.section2 .card.overflowBackdropCard {
-	width: 12% !important;
+	width: 24% !important;
 	font-size: 90% !important;
 }
 
@@ -2473,6 +2474,9 @@ button.is-emby-button:hover emby-button .navMenuOptionText {
 
 .layout-desktop .verticalSection-extrabottompadding {
 	margin-bottom: 1em !important;
+}
+
+.layout-desktop .nextUpSection.verticalSection.detailVerticalSection {
 }
 
 /* Remove empty space at bottom of page */
