--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2809,7 +2809,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   right: 4em;
 }
 
-.emby-scroller-container {
+.layout-desktop #homeTab .emby-scroller-container {
   position: relative;
   max-height: 28.35em;
   overflow: hidden;
